# internet_lab

./: .env  .gitignore  Dockerfile  Dockerfile.test  README.md  docker-compose.yaml  init.sql  pyproject.toml  redis_.py  requirements.txt  run.py
app/: config.py  container.py  database.py  limiter.py  logger.py  pyproject.toml  redis_.py
app/dao/: redis.py  task.py  user.py
app/dto/: redis_dao.py  task.py  user.py  user_dto.py
app/models/: task.py  user.py
app/routers/: login.py  logout.py  register.py  tasks.py  users.py
app/services/: auth_service.py  authentication.py  task.py  user.py  user_service.py
tests/: http_service.py  test_token.py
